Fix to memories content alignment in the main content page.

--- a/frontend/src/assets/styles/cmps/content/memories-content/_MemoriesContent.scss
+++ b/frontend/src/assets/styles/cmps/content/memories-content/_MemoriesContent.scss
@@ -43,7 +43,6 @@
   gap: 60px;
   padding-inline: 6%;
   width: auto;
-  height: 100%;
 
   @media (max-width: 896px) {
     grid-template-columns: repeat(2, 1fr);
